fixed video display width on mobile

--- a/src/app/components/home/home.component.css
+++ b/src/app/components/home/home.component.css
@@ -13,6 +13,7 @@ main {
   grid-template-columns: repeat(auto-fit, minmax(12rem, 1fr));
 }
 
+
 .container {
   display: inline-block;
   word-wrap: normal;
@@ -70,4 +71,12 @@ p {
   font-size: 12px;
   color: #4f4f4f;
   font-weight: 400;
+}
+
+
+@media (max-width: 439px) {
+  .container {
+    width: 90%;
+    margin: auto;
+  }
 }
